# PyContinual

./: .gitignore  .gitinore  pyproject.toml
res/dil_classification/asc/: bert_adapter_classic_.txt_forward_f1_macro  bert_adapter_classic_.txt_forward_performance  bert_adapter_classic_.txtprogressive.acc  bert_adapter_classic_.txtprogressive.f1_macro
src/: nlp_data_utils.py  requirements.txt  test.ps1
src/approaches/base/: bert_adapter_base.py  bert_adapter_mask_base.py
src/approaches/classification/: bert_adapter_mask.py
src/dataloaders/asc/: bert.py
src/networks/base/: adapters.py  my_transformers.py
src/networks/classification/: bert_adapter_mask.py
