[project]
name = "pycontinual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.23",
    "botocore>=1.40.23",
    "brotlipy>=0.7.0",
    "certifi>=2025.8.3",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.3",
    "click>=8.2.1",
    "cryptography>=45.0.7",
    "datasets>=4.0.0",
    "filelock>=3.19.1",
    "huggingface-hub>=0.34.4",
    "idna>=3.10",
    "importlib-metadata>=8.7.0",
    "jmespath>=1.0.1",
    "joblib>=1.5.2",
    "packaging>=25.0",
    "pillow>=11.3.0",
    "pip>=25.2",
    "pycparser>=2.22",
    "pyopenssl>=25.1.0",
    "pyparsing>=3.2.3",
    "pysocks>=1.7.1",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "quadprog>=0.1.13",
    "regex>=2025.9.1",
    "requests>=2.32.5",
    "s3transfer>=0.13.1",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.0",
    "scipy>=1.7",
    "setuptools>=80.9.0",
    "six>=1.17.0",
    "threadpoolctl>=3.6.0",
    "tokenizers>=0.22.0",
    "tqdm>=4.67.1",
    "torch==2.7.1",
    "transformers==4.17",
    "typing-extensions>=4.15.0",
    "urllib3>=2.5.0",
    "wheel>=0.45.1",
    "zipp>=3.23.0",
    "torchvision==0.22.1",
    "torchaudio==2.7.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
default = false
explicit = true

[dependency-groups]
dev = [
    "nvitop>=1.5.3",
    "ruff>=0.12.12",
]
